# modules

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  index.cjs  index.d.ts  index.js  modules.cjs  modules.d.ts  package.json
include/: hostconfig.h
include/cmrc/: cmrc.hpp
include/hostconfig/: config.h  version.h
include/hostconfig/modules/: class.h  hello.h
share/cmake/modules/: GetNodeAPIHeaders.cmake  GetNodeAPIWrappers.cmake  GetSourceInfo.cmake
src/examples/napi/: modules.cpp
src/examples/node_addon_api/: modules.cpp
src/hostconfig/modules/: class.cpp  functions.cpp  hello.cc  hello.cpp
